# qlnet

./: CMakeLists.txt  README.md  main.cpp  node.h  patternset.cpp  patternset.h
cppdug/: Input.qml  Line.qml  Perceptron.qml  SlideDeck.qml  SmallTable.qml  Table.qml  main.qml  qml.qrc
include/: layer.h  layer.inc  net.h  net.inc  node.h  node.inc  nodeoutput.h  nodeoutput.inc  pattern.h  pattern.inc  patternset.h  patternset.inc  transferfunc.h
sets/: and2  float_test  or2  xor2
src/: main.cpp  node.cpp  nodeoutput.cpp  pattern.cpp  patternset.cpp
tests/: CMakeLists.txt  test_layer.cpp  test_net.cpp  test_node.cpp  test_pattern.cpp  test_patternset.cpp
